# sqail

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASES.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  releases.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
Vibecoding/: ai-assistant.md  architecture.md  database-conenctions.md  database-connections.md  database-diagram.md  database-metadate.md  database-service.md  deployment.md  features.md  file-save-plan.md  file-save.md  git-integration.md  improvements.md  inline-ai-benchmarks.md  inline-ai.md  instructions.md  issues-bugs.md  llm-training.md  marketing.md  nosql-connections.md  plan.md
k8s/portal/: deployment.yaml  ingress.yaml  namespace.yaml
marketing/: brand-guide.md  marketing-plan.md  marketing-strategy.md  screenshots-howto.md
marketing/demo-data/: sqail-demo.sqlite
marketing/press-kit/: README.md  boilerplate.md  descriptions.md  facts.md  one-liner.md  quotes.md
scripts/: build-linux.sh  build-macos.sh  build-number.js  build-number.ps1  build-number.sh  build-release.sh  build-windows.ps1  demo-mode.sh  deploy-k3s.sh  fetch-inline-models.sh  fetch-llama-binaries.sh  fetch-llama-cpp.sh  frame-all.sh  generate-updater-keys.sh  inline-ai-benchmark.py  measure-vram.py  run.ps1  run.sh  screenshot-capture.sh  screenshot-frame.sh  screenshot-prep.sh  seed-demo-db.sh  start-dbservice.sh  startweb.sh  train_sql_lora.py  upload-release.sh
sqail-dbservice/: .gitignore
sqail-dbservice/Sqail.DbService/: Program.cs  Sqail.DbService.csproj  appsettings.json  connections.json  metadata.json
sqail-dbservice/Tests/: simple-gets.http
sqail.portal/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  releases.json  tsconfig.json
sqail.portal/src/: App.tsx  index.css
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.ci.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  dbservice.rs  lib.rs  metadata.rs  pool.rs  query.rs  query_history.rs  schema.rs  state.rs  validate.rs
src-tauri/src/ai/: client.rs  mod.rs  prompt.rs  provider.rs  store.rs
src-tauri/src/ai/inline/: binaries.rs  completer.rs  fim.rs  mod.rs  models.rs  sidecar.rs  state.rs
src-tauri/src/ai/training/: convert.rs  dataset.rs  env.rs  jobs.rs  mod.rs  models.rs  state.rs
src-tauri/src/auth/: entra.rs  mod.rs
src-tauri/src/db/: connections.rs  mod.rs  store.rs
src-tauri/src/git/: commands.rs  commit.rs  diff.rs  mod.rs  remote.rs  repo.rs  snapshot.rs  status.rs
src/components/: AiCommandPalette.tsx  AiPanel.tsx  AiProviderForm.tsx  ConnectionForm.tsx  DataGrid.tsx  DiffPreview.tsx  EditorArea.tsx  EditorTabs.tsx  GitPanel.tsx  InfoPanel.tsx  InlineAiIndicator.tsx  InlineAiSettingsTab.tsx  MetadataDetailModal.tsx  MetadataLogPanel.tsx  MetadataPanel.tsx  ProjectPanel.tsx  QueryHistoryPanel.tsx  ResizablePanel.tsx  ResizeHandles.tsx  ResultsPane.tsx  SavedQueriesPanel.tsx  SchemaDiagram.tsx  SchemaTree.tsx  SettingsModal.tsx  Sidebar.tsx  SplashScreen.tsx  SplitEditorPane.tsx  SqlEditor.tsx  TitleBar.tsx  Toolbar.tsx  TrainingSettingsTab.tsx  UpdateChecker.tsx
src/hooks/: useAiStream.ts  useDarkMode.ts  useGlobalShortcuts.ts  useInlineAiLifecycle.ts  useMetadataEvents.ts
src/lib/: detach.ts  diagramExport.ts  diagramLayout.ts  exportResults.ts  exportSchema.ts  fileOps.ts  inlineAi.ts  inlineContext.ts  inlineProvider.ts  lruCache.ts  monacoThemes.ts  sqlFormat.ts  (+6 more)
tests/: 01-app-launch.test.md  02-connections.test.md  03-editor.test.md  04-settings.test.md  05-sidebar-panels.test.md  README.md  runner.ts
(+65 files in other folders)
