[package]
name = "sqail"
version = "0.6.2"
description = "A lightweight SQL database editor with AI integration"
authors = ["sqail"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite", "postgres", "mysql"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "mysql", "sqlite", "chrono", "uuid", "json", "bigdecimal"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
hex = "0.4"
sha2 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls"] }
bb8 = "0.8"
bb8-tiberius = "0.15"

tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

# Archive extraction for the runtime-downloaded llama-server sidecar.
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"

[target.'cfg(windows)'.dependencies]
tiberius = { version = "0.12", default-features = false, features = ["winauth"] }

[target.'cfg(unix)'.dependencies]
tiberius = { version = "0.12", default-features = false, features = ["integrated-auth-gssapi"] }
libc = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
